start fixing some missing refs

--- a/SummerSchoolPaper/group4.tex
+++ b/SummerSchoolPaper/group4.tex
@@ -60,7 +60,7 @@ Our experience shows that a group of motivated individuals achieved a modest amo
 \subsubsection{Tools are Key (and not ready)}
 SPSS might be an adequate tool for performing statistical analysis; it is successfully used by many in HCI and many other areas. However, reanalysis imposes a different set of constraints and requirements, and our reanalists had many problems with the tool. Some of the problems are related to the general usability of the tool (which makes reanalysis difficult if you are not an SPSS expert), some related to the implicit design assumption in SPSS that the data is collected, analized and interpreted by the same person. One of the key problems of using SPSS to enable recomputation is that there is no easy way to establish a clear correspondence between the results of the analysis in SPSS and the specific statistics extracted for the paper text, tables and graphics. 
 
-R seems better suited for these tasks. Tt is possible to write R code that integrates with the text through SWeave \cite{sweave} so that the specific analyses are compiled together with the pdf document. This makes the origin and procedure used to obtain a particular numerical result traceable to the data, and therefore easier to check and recompute. Although this is highly desirable it might still be unreasonable to demand that everyone writing or reviewing HCI and psychology papers master a programming language and tools that are generally not renowned for their usability, and that everyone is able to deal with the installation hassles of R, SWeave, ggplot2, LaTeX, etc. in their operating system of choice. There is room for improvement for these tools, but commercial tools still have an opportunity to retain their business if they provide features that adapt to the demands of easy recomputation and better support for scientific reporting. Although our experience only involved R and SPSS, the example extrapolates to other commercial tools (e.g., SAS) and open source projects (SciPy) in the statistical arena.
+R seems better suited for these tasks. It is possible to write R code that integrates with the text through SWeave \cite{lmucs-papers:Leisch:2002} so that the specific analyses are compiled together with the pdf document. This makes the origin and procedure used to obtain a particular numerical result traceable to the data, and therefore easier to check and recompute. Although this is highly desirable it might still be unreasonable to demand that everyone writing or reviewing HCI and psychology papers master a programming language and tools that are generally not renowned for their usability, and that everyone is able to deal with the installation hassles of R, SWeave, ggplot2, LaTeX, etc. in their operating system of choice. There is room for improvement for these tools, but commercial tools still have an opportunity to retain their business if they provide features that adapt to the demands of easy recomputation and better support for scientific reporting. Although our experience only involved R and SPSS, the example extrapolates to other commercial tools (e.g., SAS) and open source projects (SciPy) in the statistical arena.
 
 \subsubsection{A Culture Change}
 Recomputation is therefore feasible and likely to become easier in the near future through better support and tools. However, it is unclear whether the research community will embrace it. Recomputability requires more work for researchers writing papers, new habits in the analysis and reporting of experiments and, for most researchers, learning and mastering new tools. A change of culture will, however, not only mean better science through more recomputable results, but also enhanced opportunities for new analysis on old data, enabling learning from others, and making scientific fraud and bad practices easier to detect. For this all to happen, we need to start demanding from authors that they share data and analyses, and that they consider the needs of the reanalyst while planning, performing, and reporting their quantitative empirical research. 
