--- a/SummerSchoolPaper/paper.bib
+++ b/SummerSchoolPaper/paper.bib
@@ -788,7 +788,16 @@ booktitle={Proceedings of the Eleventh European Workshop on Performance Engineer
 }
 
 @Manual{spsstor,
-   title = {SPSStoR: SPSS syntax to R syntax},
+   title = {{SPSStoR}: {SPSS} syntax to {R} syntax},
    author = {Brandon LeBeau},
    note = {R package version 0.1},
+   url = {https://github.com/lebebr01/SPSStoR}
  }
+
+@Misc{replichiVenue,
+    title = {{RepliCHI}: Revisiting {HCI} Findings},
+    key = {RepliCHI},
+    howpublished = {\url{http://replichi.com/}},
+    note = {Accessed 1 September 2014},
+}
+
