make bibtex a bit more consistent

--- a/SummerSchoolPaper/recomputation.tex
+++ b/SummerSchoolPaper/recomputation.tex
@@ -1,17 +1,19 @@
 \section{The state of the art}
 \label{s:recomputation}
 
-Reproducibility in computational science has been of interest for
-several years now, with some considering the nature of computational
-science to make the issues distinct from other
-sciences~\cite{donoho:reproducible}. While reproducibility is
-acknowledged as a fundamental part of the scientific method, various
-studies have shown that many, if not most, research papers are not
+Reproducibility, replicability and the like have been discussed for
+many years~\cite{lubin:replicability} and are acknowledged as a
+fundamental part of the scientific method. More recently, interest has
+arisen in reproducibility specifically in computational science, with
+some considering the nature of computational science to make the
+issues distinct from other sciences~\cite{donoho:reproducible}.
+Despite its importance, various studies have shown that many, if not
+most, research papers are not
 reproducible~\cite{bonnet:repeatability,hornbaek:replications,ioannidis:repeatability}.
-This has led to calls for independent boards to replicate and
-certify research experiments~\cite{baker:verify}. At the same time,
-efforts are ongoing to improve methodologies into determining whether
-an experiment has been reproduced accurately~\cite{johnson:evidence}.
+This has led to calls for independent boards to replicate and certify
+research experiments~\cite{baker:verify}. At the same time, efforts
+are ongoing to improve methodologies into determining whether an
+experiment has been reproduced accurately~\cite{johnson:evidence}.
 
 Terminology is important, but unfortunately many terms are used
 interchangeably in this area.  Peng~\cite{peng:reproducible} describes
