--- a/SummerSchoolPaper/paper.bib
+++ b/SummerSchoolPaper/paper.bib
@@ -18,6 +18,50 @@
     title = "{GitHub} repository for Parallel Solvers for Hard Problems",
 }
 
+@Misc{trole,
+    year = 2014,
+    url = {https://github.com/mbareford/trole},
+    author = {Michael Bareford},
+    title = {{GitHub} repository for {Taylor} Relaxation of Loop
+        Ensembles},
+}
+
+@Misc{gsl,
+    title = {{GSL} -- {GNU Scientific Library}},
+    key = {gsl},
+    howpublished = {\url{http://www.gnu.org/software/gsl/}},
+    note = {Accessed 1 September 2014},
+}
+
+@Misc{nag,
+    title = {The {NAG} {C} Library},
+    key = {nag},
+    howpublished = {\url{http://www.nag.co.uk/numeric/CL/CLdescription.asp}},
+    note = {Accessed 1 September 2014},
+}
+
+@misc{ssj,
+    title = {{SSJ}: Stochastic Simulation in {Java}},
+    key = {ssj},
+    howpublished = {\url{http://simul.iro.umontreal.ca/ssj-2/indexe.html}},
+    note = {Accessed 1 September 2014},
+}
+
+@misc{quanticol,
+    title = {{QUANTICOL}: A Quantitative Approach to Management and
+        Design of Collective and Adaptive Behaviours},
+    key = {quanticol},
+    howpublished = {\url{http://blog.inf.ed.ac.uk/quanticol/}},
+    note = {Accessed 1 September 2014},
+}
+
+@misc{dimacs,
+    title = {{DIMACS} Implementation Challenges},
+    author = {{DIMACS}},
+    howpublished = {\url{http://dimacs.rutgers.edu/Challenges/}},
+    note = {Accessed 1 September 2014},
+}
+
 @Misc{gent:recomputation,
   author      =	{Gent, Ian P.},
   title	      =	{The Recomputation Manifesto},
