--- a/SummerSchoolPaper/obstacles.tex
+++ b/SummerSchoolPaper/obstacles.tex
@@ -1,4 +1,4 @@
-\section{Obstacles to Reproducibility in Computational Sciences}
+\section{Obstacles to Reproducibility in the Computational Sciences}
 \label{s:obstacles}
 
 There are various obstacles to reproducibility, and many of these were
@@ -11,7 +11,7 @@ Amongst the obstacles and challenges that we identified are:
   the issue of reproducibility is
   currently actively discussed by the scientific community, 
   and funding bodies do campaign for
-  openness in computational science (e.g.,~\cite{NSF}), 
+  openness in the computational sciences (e.g.,~\cite{NSF}), 
   the prevalent impression from the discussions at 
   the summer school is that there is still a lot to be done to increase 
   awareness of how one can benefit from reproducibility.
@@ -65,7 +65,8 @@ Second, given that one of the key aims of reproducibility in science
   is to offer independent verification, the amount of knowledge 
   needed to rerun an experiment has to be reasonably adapted to the
   target audience.
-Interdisciplinarity is inherent in the idea of computational sciences that
+Interdisciplinarity is inherent in the idea of the computational
+sciences, which
   merge computational techniques with diverse domains of science.
 Consequently, one has to take into account that the users who will attempt to
   reproduce the results of an experiment may be
