--- a/SummerSchoolPaper/recomputation.tex
+++ b/SummerSchoolPaper/recomputation.tex
@@ -4,8 +4,8 @@
 Reproducibility, replicability and the like have been discussed for
 many years~\cite{lubin:replicability} and are acknowledged as a
 fundamental part of the scientific method. More recently, interest has
-arisen in reproducibility specifically in computational science, with
-some considering the nature of computational science to make the
+arisen in reproducibility specifically in the computational sciences, with
+some considering the nature of the computational sciences to make the
 issues distinct from other sciences~\cite{donoho:reproducible}.
 Despite its importance, various studies have shown that many, if not
 most, research papers are not
@@ -60,7 +60,7 @@ practices, uses version control and is available to recompute on a VM.
 %also needs to be shared: the ethics process. As virtual machines are
 %increasingly used for packaging and making experiments recomputatable,
 %we highlight the issues that arise when such VMs are used for parallel and
-%distributed experiments. As computational science encompasses more
+%distributed experiments. As the computational sciences encompass more
 %disciplines than just computer science, we focus on whether any issues
 %arise when recomputating non-CS experiments. And finally, we study one
 %particular part of computer science that straddles other disiplines
