No https needed in thebEMCSR school URL

--- a/SummerSchoolPaper/intro.tex
+++ b/SummerSchoolPaper/intro.tex
@@ -56,7 +56,7 @@ experiment be reproduced by someone with no specific background in the area?
 Most of the work for this paper was performed during the Summer School on
 Experimental Methodology in Computational Science Research.\footnote{St
 Andrews, Scotland, August 4-8, 2014,
-\url{https://blogs.cs.st-andrews.ac.uk/emcsr2014/}}
+\url{http://blogs.cs.st-andrews.ac.uk/emcsr2014/}}
 Indeed, a highly
 provisional first draft of this paper was completed by the end of the Summer
 School~\cite{emcsr_arxiv_draft}, with the ensuing weeks used in completing work and writing.  
