--- a/SummerSchoolPaper/paper.bib
+++ b/SummerSchoolPaper/paper.bib
@@ -843,3 +843,53 @@ booktitle={Proceedings of the Eleventh European Workshop on Performance Engineer
     volume = {12},
     year = {1957}
 }
+
+
+@misc{Nacenta:memorability_data,
+    title = {Memorability of pre-designed and user-defined gesture sets: experimental dataset},
+    howpublished = {\url{http://research-repository.st-andrews.ac.uk/handle/10023/3486}},
+    note = {Accessed 1 September 2014},
+    journal = {University of St Andrews Research Repository},
+    author = {Nacenta, Miguel A. and Kamber, Yemliha and Qiang, Yizhou and Kristensson, Per Ola}
+}
+
+@inproceedings{Wilson:2011,
+ author = {Wilson, Max L. and Mackay, Wendy and Chi, Ed and Bernstein, Michael and Russell, Dan and Thimbleby, Harold},
+ title = {RepliCHI - CHI Should Be Replicating and Validating Results More: Discuss},
+ booktitle = {CHI '11 Extended Abstracts on Human Factors in Computing Systems},
+ year = {2011},
+ isbn = {978-1-4503-0268-5},
+ location = {Vancouver, BC, Canada},
+ pages = {463--466},
+ numpages = {4},
+ url = {http://doi.acm.org/10.1145/1979742.1979491},
+ doi = {10.1145/1979742.1979491},
+ acmid = {1979491},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {hci, replication, research, science},
+} 
+
+@inproceedings{Mackay:2007,
+ author = {Mackay, Wendy E. and Appert, Caroline and Beaudouin-Lafon, Michel and Chapuis, Olivier and Du, Yangzhou and        Fekete, Jean-Daniel and Guiard, Yves},
+ title = {Touchstone: Exploratory Design of Experiments},
+ booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+ year = {2007},
+ isbn = {978-1-59593-593-9},
+ location = {San Jose, California, USA},
+ pages = {1425--1434},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1240624.1240840},
+ doi = {10.1145/1240624.1240840},
+ acmid = {1240840},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {benchmarking, experimental design, interaction techniques, touchstone},
+}
+
+@book{hartson:2012,
+  title={The UX book: process and guidelines for ensuring a quality user experience},
+  author={Hartson, Rex and Pyla, Pardha S},
+  year={2012},
+  publisher={Elsevier}
+}
