--- a/SummerSchoolPaper/paper.bib
+++ b/SummerSchoolPaper/paper.bib
@@ -893,3 +893,110 @@ booktitle={Proceedings of the Eleventh European Workshop on Performance Engineer
   year={2012},
   publisher={Elsevier}
 }
+
+@InProceedings{nacenta:2008,
+  author      =	{Nacenta, Miguel A. and Mandryk, Regan L. and Gutwin, Carl},
+  title	      =	{Targeting Across Displayless Space},
+  booktitle   =	{Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+  series      =	{CHI '08},
+  year	      =	{2008},
+  isbn	      =	{978-1-60558-011-1},
+  location    =	{Florence, Italy},
+  pages	      =	{777--786},
+  numpages    =	{10},
+  url	      =	{http://doi.acm.org/10.1145/1357054.1357178},
+  doi	      =	{10.1145/1357054.1357178},
+  acmid	      =	{1357178},
+  publisher   =	{ACM},
+  address     =	{New York, NY, USA},
+  keywords    =	{displayless space, halo, mouse ether, multi-display environments, multi-monitor, off-screen feedback, stitching}
+}
+
+@Article{shoemaker:2012,
+  author      =	{Shoemaker, Garth and Tsukitani, Takayuki and Kitamura, Yoshifumi and Booth, Kellogg S.},
+  title	      =	{Two-Part Models Capture the Impact of Gain on Pointing Performance},
+  journal     =	{ACM Trans. Comput.-Hum. Interact.},
+  issue_date  =	{December 2012},
+  volume      =	{19},
+  number      =	{4},
+  month	      =	dec,
+  year	      =	{2012},
+  issn	      =	{1073-0516},
+  pages	      =	{28:1--28:34},
+  articleno   =	{28},
+  numpages    =	{34},
+  url	      =	{http://doi.acm.org/10.1145/2395131.2395135},
+  doi	      =	{10.1145/2395131.2395135},
+  acmid	      =	{2395135},
+  publisher   =	{ACM},
+  address     =	{New York, NY, USA},
+  keywords    =	{Fitts, Welford, gain, interaction techniques, large displays, pointing}
+}
+
+@InProceedings{wilson:2012,
+  author      =	{Wilson, Max and Mackay, Wendy and Chi, Ed and Bernstein, Michael and Nichols, Jeffrey},
+  title	      =	{RepliCHI SIG: From a Panel to a New Submission Venue for Replication},
+  booktitle   =	{CHI '12 Extended Abstracts on Human Factors in Computing Systems},
+  series      =	{CHI EA '12},
+  year	      =	{2012},
+  isbn	      =	{978-1-4503-1016-1},
+  location    =	{Austin, Texas, USA},
+  pages	      =	{1185--1188},
+  numpages    =	{4},
+  url	      =	{http://doi.acm.org/10.1145/2212776.2212419},
+  doi	      =	{10.1145/2212776.2212419},
+  acmid	      =	{2212419},
+  publisher   =	{ACM},
+  address     =	{New York, NY, USA},
+  keywords    =	{replication, reproducing results, research methods}
+}
+
+@InProceedings{wilson:2013,
+  author      =	{Wilson, Max L. L. and Resnick, Paul and Coyle, David and Chi, Ed H.},
+  title	      =	{RepliCHI: The Workshop},
+  booktitle   =	{CHI '13 Extended Abstracts on Human Factors in Computing Systems},
+  series      =	{CHI EA '13},
+  year	      =	{2013},
+  isbn	      =	{978-1-4503-1952-2},
+  location    =	{Paris, France},
+  pages	      =	{3159--3162},
+  numpages    =	{4},
+  url	      =	{http://doi.acm.org/10.1145/2468356.2479636},
+  doi	      =	{10.1145/2468356.2479636},
+  acmid	      =	{2479636},
+  publisher   =	{ACM},
+  address     =	{New York, NY, USA},
+  keywords    =	{evaluation, methodology, replication}
+}
+
+@InProceedings{wilson:2014,
+  author      =	{Wilson, Max L. and Chi, Ed H. and Reeves, Stuart and Coyle, David},
+  title	      =	{RepliCHI: The Workshop II},
+  booktitle   =	{CHI '14 Extended Abstracts on Human Factors in Computing Systems},
+  series      =	{CHI EA '14},
+  year	      =	{2014},
+  isbn	      =	{978-1-4503-2474-8},
+  location    =	{Toronto, Ontario, Canada},
+  pages	      =	{33--36},
+  numpages    =	{4},
+  url	      =	{http://doi.acm.org/10.1145/2559206.2559233},
+  doi	      =	{10.1145/2559206.2559233},
+  acmid	      =	{2559233},
+  publisher   =	{ACM},
+  address     =	{New York, NY, USA},
+  keywords    =	{evaluation, methodology, replication}
+}
+
+@InProceedings{grijincu:2014,
+  author      =	{Grijincu, Daniela and Nacenta, Miguel A. and Kristensson, Per Ola},
+  title	      =	{User-defined Interface Gestures: a Dataset and Analysis},
+  booktitle   =	{Proceedings of the ACM conference on Interactive Tabletops and Surfaces},
+  series      =	{ITS'14},
+  year	      =	{2014 (in press)},
+  location    =	{Dresden, Germany},
+  pages	      =	{},
+  numpages    =	{10},
+  publisher   =	{ACM},
+  address     =	{New York, NY, USA},
+  keywords    =	{Gesture design, user-defined gestures, gesture elicitation, gesture analysis methodology, gesture annotation, gesture memorability, gesture datasets}
+}
